# SistemaReservaCine

./: .gitignore  CMakeLists.txt  Comentarios  Instrucciones  InstruccionesCine  InstruccionesCliente  README.md  compilar.sh  run.sh  todo
Diagramas/: Diagrama IPC.html  Diagrama de Secuencia.html
src/: cine.cpp  commons.h  dest.cpp  init.cpp  msg.cpp  msg.h
src/admin/: admin.cpp  main.cpp
src/cine/: cine.cpp  main.cpp
src/cine/cine_timeout/: main.cpp
src/cine_login/: cine_login.cpp  main.cpp
src/cliente/: cliente.cpp  cliente_asyn.cpp  interfaz.cpp  interfaz.h  main.cpp  nuevo_cliente.cpp
src/cliente/cliente_asyn/: main.cpp
src/cliente/mom/: mom_cliente.cpp
src/common/: canal.cpp  canal.h  canal_comunicacion.cpp  canal_comunicacion.h  color_print.h  constantes.h  entidad.h  operaciones.h  sock.h
src/common/ipc/: msg_queue.cpp  msg_queue.h  sh_mem.cpp  sh_mem.h  sock.cpp  sock.h
src/environment/: environment.cpp  main.cpp
src/mom/: mom.cpp
src/socket_adapter_cine/: socket_adapter_cine.cpp
src/socket_adapter_cine_server/: socket_adapter_cine_server.cpp
src/socket_adapter_cliente/: socket_adapter_cliente.cpp
